--- a/css/main.css
+++ b/css/main.css
@@ -640,9 +640,7 @@ svg:focus {
 
   opacity: 0.2;
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    scale 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 500ms ease, opacity 250ms ease;
 }
 
 .mailling-button:hover .icon-send,
