--- a/css/main.css
+++ b/css/main.css
@@ -640,7 +640,8 @@ svg:focus {
 
   opacity: 0.2;
 
-  transition: transform 500ms ease, opacity 250ms ease;
+  transition: transform 500ms cubic-bezier(0.1, 0.33, 0, 1.03),
+    opacity 250ms ease;
 }
 
 .mailling-button:hover .icon-send,
